# agentic-rag-platform

./: .gitignore  Dockerfile  README.md  a-rag.code-workspace  docker-compose.yaml  pyproject.toml  suport_questions.md
app/: __init__.py  __main__.py  dependencies.py  settings.py
app/agents/: __init__.py  controllers.py  models.py  routes.py  schemas.py
app/core/: completion.py  metrics.py  utils.py
app/core/agents/: config_schema.py  engine.py  loader.py
app/core/agents/tools/: create_ticket.py  customer_overview.py  kb.py  support.py
app/core/connectors/: milvus.py  milvus_bootstrap.py  mongo.py
app/core/db/: timestamps.py
app/core/pdf_uploader/: chunkfier.py  chunkifier.py  embedder.py  parser.py  pdf_ingestion.py
app/customers/: models.py  schemas.py  seed.py
app/health/: __init__.py
app/metrics/: __init__.py  controllers.py  routes.py
app/rag/: __init__.py  controllers.py  models.py  routes.py  schemas.py
environments/: .env.example
resources/: agents.yaml
resources/prompts/: customer_support_agent.md  knowledge_agent.md  router_agent.md
